# cpp_cmake_proj_template

./: .gitignore  CMakeLists.txt  CMakeLists_src.txt  CMakeLists_test.txt  README.md  create_proj.bat  create_proj.sh  generate_vs_proj.bat
tools/: build_all.sh  generate_vs_proj.bat
